# callsign-data

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  requirements.txt  setup.cfg
.github/workflows/: upload.yml
callsigns/: builder.py  constants.py  fetcher.py  parser.py  uploader.py
