[metadata]

name = callsigns
version = 0.0.1
author_email = spencer.young@spyoung.com
author = Spencer Young
description =  Download and parse ULS Amateur License records from FCC ULS downloads
long_description = Download and parse ULS Amateur License records from FCC ULS downloads
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/callsign-data
project_urls =
    Documentation = https://github.com/spyoungtech/callsign-data
    Funding = https://github.com/sponsors/spyoungtech/
    Source = https://github.com/spyoungtech/callsign-data
    Tracker = https://github.com/spyoungtech/callsign-data/issues
keywords =
    callsigns
    call
    sign
    radio
    ham
    amateur
    FCC
    ULS

license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Programming Language :: Python
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
include_package_data = True
python_requires = >=3.12.0
packages =
    callsigns
install_requires =
    requests
    boto3
    python-dateutil


[options.package_data]
callsigns =
    py.typed
